#fix: - Modal testimoni bug - strip tag on testimoni - update z-index on .main-header, bug style on modal popup

--- a/public/resources/spruha/assets/css/style.css
+++ b/public/resources/spruha/assets/css/style.css
@@ -5,7 +5,7 @@
 Project        :   SPRUHA - HTML5 Bootstrap Admin Template
 Version        :   V.1
 Create Date    :   03/10/20
-Copyright      :   Spruko Technologies Private Limited 
+Copyright      :   Spruko Technologies Private Limited
 Author         :   SprukoSoft
 Author URL     :   https://themeforest.net/user/sprukosoft
 Support	       :   support@spruko.com
@@ -73599,7 +73599,8 @@ input[type=search]::-webkit-search-cancel-button {
     }
 
     .main-header {
-        z-index: 9999;
+        /* Z-index must be below .modal or other popup component */
+        z-index: 1000;
     }
 
     .header-search .select2-container--default .select2-selection--single {
